website/assets/styles.css
:root {
  --primary: #FF439B;
  --accent: #FAFF5C;
  --background: #1D1C36;
  --background-dark: #11101F;

  --text-pink: #FFD0E6;
  --text-blue: #D2D0FF;
}

img {
  max-width: 100%;
  max-height: 100%;
}

html {
  scroll-padding-top: 5rem;
}

body {
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  background-color: var(--background-dark);
  font-family: "Lexend", sans-serif;
  color: var(--text-blue);
}

ul {
  padding-left: 1rem;
}

a {
  color: var(--primary);
  text-decoration: underline;
}

#titlebar {
  z-index: 999;
  position: sticky;
  top: 0;
  display: flex;
  white-space: nowrap;
  align-items: center;
  width: 100vw;
  box-sizing: border-box;
  height: 4rem;
  line-height: 2.5rem;
  background-color: var(--primary);
  box-shadow: #000000A0 0 0 1.5rem;
}

#titlebar img {
  display: none;
}

#titlebar h1 {
  text-wrap: nowrap;
  display: none;
  color: var(--background);
}

#titlebar nav {
  overflow-x: scroll;
  overflow-y: hidden;
  scrollbar-width: none;
  margin-left: auto;
}

#titlebar nav::before {
  position: absolute;
  top: 0;
  content: "";
  height: 100%;
  width: 3rem;
  background: linear-gradient(to right, var(--primary), transparent);
}

#titlebar nav::after {
  position: absolute;
  top: 0;
  right: 0;
  content: "";
  height: 100%;
  width: 3rem;
  background: linear-gradient(to left, var(--primary), transparent);
}

#titlebar nav ul {
  display: flex;
  flex-direction: row;
  min-width: fit-content;
  list-style-type: none;
  justify-content: space-between;
  padding: 0 3rem;
  gap: 2rem;
  margin: 0;
}

#titlebar nav li {
  align-self: end;
}

#titlebar nav ul a {
  flex: 1 1 auto;
  text-align: center;
  font-size: 1.15rem;
  text-decoration: none;
  color: var(--text-pink);
  transition: color 0.1s ease-out;
}

#titlebar nav ul a:hover,
#titlebar nav ul a:focus {
  color: white;
  text-decoration: underline;
  text-decoration-thickness: 2px;
}

h1,
h2,
h3 {
  font-family: "Ubuntu", sans-serif;
  font-weight: 500;
  color: var(--text-pink)
}

h1 {
  font-weight: 600;
}

#hero {
  display: flex;
  flex-direction: column;
  background-color: var(--background-dark);
  padding: 2rem;
  margin: -1rem -1rem 0 -1rem;
  height: calc(100vh - 4rem);
  gap: 2rem;
  place-items: center;
  box-sizing: border-box;
}

#hero div {
  display: flex;
  flex-direction: column;
  place-items: center;
}

#hero>* {
  animation: fade-in ease 1s both;
}

#hero .button {
  white-space: nowrap;
  background-color: var(--background-dark);
  border: solid 2px var(--accent);
  color: var(--accent);
  font-family: "Ubuntu", sans-serif;
  font-size: 1.15rem;
  font-weight: 500;
  margin-top: 4rem;
  padding: 0.5rem 0.75rem;
  border-radius: 2rem;
  width: fit-content;
  transition: all 0.15s ease-out;
  place-self: center;
  text-decoration: none;
  animation-delay: 0.5s;
}

#hero .button:hover,
#hero .button:focus {
  transform: translateY(-0.1rem);
  color: var(--background);
  background-color: var(--accent);
}

#hero .button:active {
  transform: translateY(0.15rem);
  opacity: 75%;
}

#hero aside {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  min-height: 67vw;
  position: relative;
  order: -1;
  perspective: 18cm;
}

#hero aside img {
  object-fit: contain;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  position: absolute;
  border-radius: 1rem;
  animation: carousel ease 32s both infinite;
  box-shadow: 0.5rem 1rem 2rem #00000050;
}

/* #hero aside:hover img { */
/* transform: scale2D(150%); */
/* } */

#mission,
#vision {
  line-height: 2.5rem;
  animation: fade-in ease 1s both;
}

#vision {
  color: var(--text-blue);
  animation-delay: 0.25s;
}

main {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  gap: 1rem;
  background-color: var(--background);
}

main section {
  padding: 1rem;
  border-radius: 1rem;
}

main section h1,
main section h2,
main section h3 {
  padding-left: 1rem;
  line-height: 2rem;
}

main section h3 {
  margin-bottom: 0;
}

main section:target {
  animation: anchor-highlight 0.75s ease;
}

main section:target:has(.horizontal-sections) {
  animation: anchor-highlight-solid 0.75s ease;
}

main section:has(.horizontal-sections) h1,
main section:has(.horizontal-sections) h2,
main section:has(.horizontal-sections) h3 {
  padding-left: 0;
  color: var(--background);
  font-weight: bold;
}

main section:has(.horizontal-sections) a {
  color: var(--background);
  text-decoration: underline;
  text-decoration-thickness: 1.5px;
  text-decoration-color: var(--accent);
}

main section:target h1,
main section:target h2 {
  color: white;
  text-decoration: underline;
  /* apparently this property is only supported on Firefox
  text-decoration-inset: 0.75rem; */
  text-decoration-thickness: 2px;
  text-decoration-color: var(--accent);
  padding-left: 2rem;
}

main section:target:has(.horizontal-sections) h1,
main section:target:has(.horizontal-sections) h2 {
  color: var(--background);
}

main section ul {
  display: flex;
  flex-direction: column;
  line-height: 2rem;
}

main section:has(.horizontal-sections) {
  margin: 0;
  border-radius: 0;
  background-color: var(--primary);
  color: var(--background);
}

#about p {
  font-size: 1.25rem;
}

#skills {
  margin: -1rem;
}

.horizontal-sections {
  display: grid;
  gap: 0 4rem;
}

.horizontal-sections div {
  width: 100%;
}

.horizontal-sections ul {
  padding-left: 1rem;
}

.horizontal-sections .spacer {
  min-width: 2px;
  min-height: 2px;
  border-right: 2px var(--background) dashed;
  opacity: 25%;
  margin: 0;
  padding: 0;
}

footer {
  padding: 1rem 0;
  text-align: center;
  font-style: italic;
  background-color: var(--background-dark);
}

@keyframes anchor-highlight {
  0% {
    background-color: #ffffff20;
  }

  100% {
    background-color: transparent;
  }
}

@keyframes anchor-highlight-solid {
  0% {
    background-color: #ffffffa0;
  }

  100% {
    background-color: var(--primary);
  }
}

@keyframes fade-in {
  0% {
    transform: translateY(-2rem);
    opacity: 0;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes carousel {
  0% {
    z-index: 1;
    transform: translateY(-15%) rotateX(15deg);
    filter: blur(0);
    opacity: 0;
  }

  3%,
  22% {
    transform: translateY(0) rotateX(0deg);
    filter: blur(0);
    opacity: 1;
  }

  25% {
    z-index: 0;
    transform: translateY(15%) rotateX(-15deg);
    filter: blur(0.5rem);
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

@media (min-width: 320px) {
  #titlebar img {
    display: block;
  }

  #mission,
  #vision {
    font-size: 1.75rem;
  }
}

@media (min-width: 768px) {
  html {
    scroll-padding-top: 6rem;
  }

  #titlebar img {
    margin-left: 2rem;
  }

  #titlebar nav ul {
    opacity: 100%;
    gap: 4rem;
  }

  #hero {
    flex-direction: row;
    padding: 4rem;
    box-sizing: border-box;
    margin: -2rem -2rem 0 -2rem;
  }

  #hero aside {
    margin-bottom: 4rem;
    height: 100%;
    order: 0;
  }

  #hero aside img {
    margin: auto;
  }

  main {
    gap: 2rem;
    padding: 2rem;
  }

  main section {
    max-width: 512px;
    width: 100%;
    padding: 2rem;
  }

  #skills {
    max-width: fit-content;
    border-radius: 1.5rem;
  }

  main section:not(:has(.horizontal-sections)) ul {
    flex-direction: row;
    gap: 4rem;
    line-height: 2rem;
  }

  #skills {
    margin: 0;
  }

  .to-right {
    margin-left: auto;
  }

  .horizontal-sections {
    grid-template-columns: 1fr 1fr;
  }

  .horizontal-sections div {
    width: max-content;
  }

  footer {
    padding: 2rem 0;
  }
}

@media (min-width: 1024px) {
  #titlebar h1 {
    margin: 0 -2rem 0 2rem;
    display: block;
  }

  .horizontal-sections {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  main section {
    max-width: 768px;
  }

  #hero aside img {
    max-width: 33vw;
  }
}

